@@ -429,7 +429,7 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 	 * @param pingSender
 	 *            Custom {@link MqttPingSender} implementation.
 	 * @param executorService
-	 *            used for managing threads. If null then a newFixedThreadPool
+	 *            used for managing threads. If null then a newScheduledThreadPool
 	 *            is used.
 	 * @throws IllegalArgumentException
 	 *             if the URI does not start with "tcp://", "ssl://" or
@@ -616,6 +616,7 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 			netModule = new SSLNetworkModule((SSLSocketFactory) factory, host, port, clientId);
 			((SSLNetworkModule)netModule).setSSLhandshakeTimeout(options.getConnectionTimeout());
 			((SSLNetworkModule)netModule).setSSLHostnameVerifier(options.getSSLHostnameVerifier());
+			((SSLNetworkModule)netModule).setHttpsHostnameVerificationEnabled(options.isHttpsHostnameVerificationEnabled());
 			// Ciphers suites need to be set, if they are available
 			if (factoryFactory != null) {
 				String[] enabledCiphers = factoryFactory.getEnabledCipherSuites(null);
@@ -657,6 +658,8 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 			// Create the network module...
 			netModule = new WebSocketSecureNetworkModule((SSLSocketFactory) factory, address, host, port, clientId);
 			((WebSocketSecureNetworkModule)netModule).setSSLhandshakeTimeout(options.getConnectionTimeout());
+			((WebSocketSecureNetworkModule)netModule).setSSLHostnameVerifier(options.getSSLHostnameVerifier());
+			((WebSocketSecureNetworkModule)netModule).setHttpsHostnameVerificationEnabled(options.isHttpsHostnameVerificationEnabled());
 			// Ciphers suites need to be set, if they are available
 			if (wSSFactoryFactory != null) {
 				String[] enabledCiphers = wSSFactoryFactory.getEnabledCipherSuites(null);
@@ -750,7 +753,7 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 		// userName={3} password={4} will={5} userContext={6} callback={7}
 		log.fine(CLASS_NAME, methodName, "103",
 				new Object[] { Boolean.valueOf(options.isCleanSession()), new Integer(options.getConnectionTimeout()),
-						new Integer(options.getKeepAliveInterval()), options.getUserName(),
+						Integer.valueOf(options.getKeepAliveInterval()), options.getUserName(),
 						((null == options.getPassword()) ? "[null]" : "[notnull]"),
 						((null == options.getWillMessage()) ? "[null]" : "[notnull]"), userContext, callback });
 		comms.setNetworkModules(createNetworkModules(serverURI, options));
@@ -815,7 +818,7 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 			throws MqttException {
 		final String methodName = "disconnect";
 		// @TRACE 104=> quiesceTimeout={0} userContext={1} callback={2}
-		log.fine(CLASS_NAME, methodName, "104", new Object[] { new Long(quiesceTimeout), userContext, callback });
+		log.fine(CLASS_NAME, methodName, "104", new Object[] { Long.valueOf(quiesceTimeout), userContext, callback });
 
 		MqttToken token = new MqttToken(getClientId());
 		token.setActionCallback(callback);
@@ -1141,9 +1144,14 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 
 		IMqttToken token = this.subscribe(topicFilters, qos, userContext, callback);
 
-		// add message handlers to the list for this client
+		// add or remove message handlers to the list for this client
 		for (int i = 0; i < topicFilters.length; ++i) {
-			this.comms.setMessageListener(topicFilters[i], messageListeners[i]);
+            if (messageListeners[i] == null) {
+                this.comms.removeMessageListener(topicFilters[i]);
+            }
+            else {
+                this.comms.setMessageListener(topicFilters[i], messageListeners[i]);
+            }
 		}
 
 		return token;
@@ -1235,6 +1243,15 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 		log.fine(CLASS_NAME, methodName, "110");
 
 		return token;
+	}
+
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see IMqttAsyncClient#removeMessage(IMqttDeliveryToken)
+	 */
+	public boolean removeMessage(IMqttDeliveryToken token) throws MqttException {
+		return comms.removeMessage(token);
 	}
 
 	/*
@@ -1418,7 +1435,7 @@ public class MqttAsyncClient implements IMqttAsyncClient {
 	private void startReconnectCycle() {
 		String methodName = "startReconnectCycle";
 		// @Trace 503=Start reconnect timer for client: {0}, delay: {1}
-		log.fine(CLASS_NAME, methodName, "503", new Object[] { this.clientId, new Long(reconnectDelay) });
+		log.fine(CLASS_NAME, methodName, "503", new Object[] { this.clientId, Long.valueOf(reconnectDelay) });
 		reconnectTimer = new Timer("MQTT Reconnect: " + clientId);
 		reconnectTimer.schedule(new ReconnectTask(), reconnectDelay);
 	}
