@@ -28,6 +28,7 @@ import java.util.Properties;
 import java.util.Vector;
 
 import org.eclipse.paho.client.mqttv3.IMqttActionListener;
+import org.eclipse.paho.client.mqttv3.IMqttDeliveryToken;
 import org.eclipse.paho.client.mqttv3.MqttClientPersistence;
 import org.eclipse.paho.client.mqttv3.MqttDeliveryToken;
 import org.eclipse.paho.client.mqttv3.MqttException;
@@ -191,6 +192,10 @@ public class ClientState {
 		return PERSISTENCE_SENT_PREFIX + message.getMessageId();
 	}
 	
+	private String getSendPersistenceKey(int messageId) {
+		return PERSISTENCE_SENT_PREFIX + messageId;
+	}
+	
 	private String getSendConfirmPersistenceKey(MqttWireMessage message) {
 		return PERSISTENCE_CONFIRMED_PREFIX + message.getMessageId();
 	}
@@ -337,7 +342,7 @@ public class ClientState {
 					log.fine(CLASS_NAME,methodName,"604", new Object[]{key,message});
 
 					// The inbound messages that we have persisted will be QoS 2 
-					inboundQoS2.put(new Integer(message.getMessageId()),message);
+					inboundQoS2.put( Integer.valueOf(message.getMessageId()),message);
 				} else if (key.startsWith(PERSISTENCE_SENT_PREFIX)) {
 					MqttPublish sendMessage = (MqttPublish) message;
 					highestMsgId = Math.max(sendMessage.getMessageId(), highestMsgId);
@@ -352,7 +357,7 @@ public class ClientState {
 							//@TRACE 605=outbound QoS 2 pubrel key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "605", new Object[]{key,message});
 
-							outboundQoS2.put(new Integer(confirmMessage.getMessageId()), confirmMessage);
+							outboundQoS2.put( Integer.valueOf(confirmMessage.getMessageId()), confirmMessage);
 						} else {
 							//@TRACE 606=outbound QoS 2 completed key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "606", new Object[]{key,message});
@@ -365,17 +370,17 @@ public class ClientState {
 							//@TRACE 607=outbound QoS 2 publish key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "607", new Object[]{key,message});
 							
-							outboundQoS2.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS2.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						} else {
 							//@TRACE 608=outbound QoS 1 publish key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "608", new Object[]{key,message});
 
-							outboundQoS1.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS1.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						}
 					}
 					MqttDeliveryToken tok = tokenStore.restoreToken(sendMessage);
 					tok.internalTok.setClient(clientComms.getClient());
-					inUseMsgIds.put(new Integer(sendMessage.getMessageId()),new Integer(sendMessage.getMessageId()));
+					inUseMsgIds.put( Integer.valueOf(sendMessage.getMessageId()), Integer.valueOf(sendMessage.getMessageId()));
 				} else if(key.startsWith(PERSISTENCE_SENT_BUFFERED_PREFIX)){
 					
 					// Buffered outgoing messages that have not yet been sent at all
@@ -384,17 +389,17 @@ public class ClientState {
 					if(sendMessage.getMessage().getQos() == 2){
 						//@TRACE 607=outbound QoS 2 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "607", new Object[]{key,message});
-						outboundQoS2.put(new Integer(sendMessage.getMessageId()),sendMessage);
+						outboundQoS2.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 					} else if(sendMessage.getMessage().getQos() == 1){
 						//@TRACE 608=outbound QoS 1 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "608", new Object[]{key,message});
 
-						outboundQoS1.put(new Integer(sendMessage.getMessageId()),sendMessage);
+						outboundQoS1.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						
 					} else {
 						//@TRACE 511=outbound QoS 0 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "511", new Object[]{key,message});
-						outboundQoS0.put(new Integer(sendMessage.getMessageId()), sendMessage);
+						outboundQoS0.put( Integer.valueOf(sendMessage.getMessageId()), sendMessage);
 						// Because there is no Puback, we have to trust that this is enough to send the message
 						persistence.remove(key);
 						
@@ -402,7 +407,7 @@ public class ClientState {
 					
 					MqttDeliveryToken tok = tokenStore.restoreToken(sendMessage);
 					tok.internalTok.setClient(clientComms.getClient());
-					inUseMsgIds.put(new Integer(sendMessage.getMessageId()),new Integer(sendMessage.getMessageId()));
+					inUseMsgIds.put( Integer.valueOf(sendMessage.getMessageId()), Integer.valueOf(sendMessage.getMessageId()));
 					
 					
 				} else if (key.startsWith(PERSISTENCE_CONFIRMED_PREFIX)) {
@@ -508,22 +513,22 @@ public class ClientState {
 			synchronized (queueLock) {
 				if (actualInFlight >= this.maxInflight) {
 					//@TRACE 613= sending {0} msgs at max inflight window
-					log.fine(CLASS_NAME, methodName, "613", new Object[]{new Integer(actualInFlight)});
+					log.fine(CLASS_NAME, methodName, "613", new Object[]{ Integer.valueOf(actualInFlight)});
 
 					throw new MqttException(MqttException.REASON_CODE_MAX_INFLIGHT);
 				}
 				
 				MqttMessage innerMessage = ((MqttPublish) message).getMessage();
 				//@TRACE 628=pending publish key={0} qos={1} message={2}
-				log.fine(CLASS_NAME,methodName,"628", new Object[]{new Integer(message.getMessageId()), new Integer(innerMessage.getQos()), message});
+				log.fine(CLASS_NAME,methodName,"628", new Object[]{ Integer.valueOf(message.getMessageId()),  Integer.valueOf(innerMessage.getQos()), message});
 
 				switch(innerMessage.getQos()) {
 					case 2:
-						outboundQoS2.put(new Integer(message.getMessageId()), message);
+						outboundQoS2.put( Integer.valueOf(message.getMessageId()), message);
 						persistence.put(getSendPersistenceKey(message), (MqttPublish) message);
 						break;
 					case 1:
-						outboundQoS1.put(new Integer(message.getMessageId()), message);
+						outboundQoS1.put( Integer.valueOf(message.getMessageId()), message);
 						persistence.put(getSendPersistenceKey(message), (MqttPublish) message);
 						break;
 				}
@@ -533,7 +538,7 @@ public class ClientState {
 			}
 		} else {
 			//@TRACE 615=pending send key={0} message {1}
-			log.fine(CLASS_NAME,methodName,"615", new Object[]{new Integer(message.getMessageId()), message});
+			log.fine(CLASS_NAME,methodName,"615", new Object[]{ Integer.valueOf(message.getMessageId()), message});
 			
 			if (message instanceof MqttConnect) {
 				synchronized (queueLock) {
@@ -548,7 +553,7 @@ public class ClientState {
 					this.pingCommand = message;
 				}
 				else if (message instanceof MqttPubRel) {
-					outboundQoS2.put(new Integer(message.getMessageId()), message);
+					outboundQoS2.put( Integer.valueOf(message.getMessageId()), message);
 					persistence.put(getSendConfirmPersistenceKey(message), (MqttPubRel) message);
 				}
 				else if (message instanceof MqttPubComp)  {
@@ -620,12 +625,12 @@ public class ClientState {
 		final String methodName = "undo";
 		synchronized (queueLock) {
 			//@TRACE 618=key={0} QoS={1} 
-			log.fine(CLASS_NAME,methodName,"618", new Object[]{new Integer(message.getMessageId()), new Integer(message.getMessage().getQos())});
+			log.fine(CLASS_NAME,methodName,"618", new Object[]{ Integer.valueOf(message.getMessageId()),  Integer.valueOf(message.getMessage().getQos())});
 			
 			if (message.getMessage().getQos() == 1) {
-				outboundQoS1.remove(new Integer(message.getMessageId()));
+				outboundQoS1.remove( Integer.valueOf(message.getMessageId()));
 			} else {
-				outboundQoS2.remove(new Integer(message.getMessageId()));
+				outboundQoS2.remove( Integer.valueOf(message.getMessageId()));
 			}
 			pendingMessages.removeElement(message);
 			persistence.remove(getSendPersistenceKey(message));
@@ -639,6 +644,39 @@ public class ClientState {
 
 			checkQuiesceLock();
 		}
+	}
+	
+	/**
+	 * This removes the MqttSend message from the outbound queue and persistence.
+	 * @param token The {@link IMqttDeliveryToken} for the message to remove
+	 * @return if the message is removed, then true, otherwise false
+	 * @throws MqttException if an exception occurs whilst removing the message
+	 */
+	protected boolean removeMessage(IMqttDeliveryToken token) throws MqttException {
+		final String methodName = "removeMessage";
+		MqttMessage message = token.getMessage();
+		int messageId = token.getMessageId();
+		boolean result = false;
+		synchronized (queueLock) {
+			if (message.getQos() == 1) {
+				if (outboundQoS1.remove( Integer.valueOf(messageId)) != null) {
+					result = true;
+				}
+			}
+			if (message.getQos() == 2) {
+				if (outboundQoS2.remove( Integer.valueOf(messageId)) != null) {
+					result = true;
+				}
+			}
+			if (pendingMessages.removeElement(message)) {
+				result = true;
+			}
+			persistence.remove(getSendPersistenceKey(messageId));
+			String key =  Integer.toString(messageId);
+			tokenStore.removeToken(key);
+			releaseMessageId(messageId);
+		}
+		return result;
 	}
 	
 	/**
@@ -687,7 +725,7 @@ public class ClientState {
                     // Add a delta, since the timer and System.currentTimeMillis() is not accurate.                                                                                                                        
                 	// A ping is outstanding but no packet has been received in KA so connection is deemed broken                                                                                                         
                     //@TRACE 619=Timed out as no activity, keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2} time={3} lastPing={4}                                                                           
-                    log.severe(CLASS_NAME,methodName,"619", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                    log.severe(CLASS_NAME,methodName,"619", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity),  Long.valueOf(time),  Long.valueOf(lastPing)});
 
                     // A ping has already been sent. At this point, assume that the                                                                                                                                       
                     // broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -698,7 +736,7 @@ public class ClientState {
                 if (pingOutstanding == 0 && (time - lastOutboundActivity >= 2*keepAlive)) {
                     
                     // I am probably blocked on a write operations as I should have been able to write at least a ping message                                                                                                    
-                	log.severe(CLASS_NAME,methodName,"642", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                	log.severe(CLASS_NAME,methodName,"642", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity),  Long.valueOf(time),  Long.valueOf(lastPing)});
 
                     // A ping has not been sent but I am not progressing on the current write operation. 
                 	// At this point, assume that the broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -718,7 +756,7 @@ public class ClientState {
                     (time - lastOutboundActivity >= keepAlive - delta)) {
 
                     //@TRACE 620=ping needed. keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2}                                                                                                              
-                    log.fine(CLASS_NAME,methodName,"620", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity)});
+                    log.fine(CLASS_NAME,methodName,"620", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity)});
 
                     // pingOutstanding++;  // it will be set after the ping has been written on the wire                                                                                                             
                     // lastPing = time;    // it will be set after the ping has been written on the wire                                                                                                             
@@ -740,7 +778,7 @@ public class ClientState {
                 }
             }
             //@TRACE 624=Schedule next ping at {0}                                                                                                                                                                                
-            log.fine(CLASS_NAME, methodName,"624", new Object[]{new Long(nextPingTime)});
+            log.fine(CLASS_NAME, methodName,"624", new Object[]{Long.valueOf(nextPingTime)});
             pingSender.schedule(nextPingTime);
 		}
 		
@@ -807,7 +845,7 @@ public class ClientState {
 						inFlightPubRels++;
 
 						//@TRACE 617=+1 inflightpubrels={0}
-						log.fine(CLASS_NAME,methodName,"617", new Object[]{new Integer(inFlightPubRels)});
+						log.fine(CLASS_NAME,methodName,"617", new Object[]{ Integer.valueOf(inFlightPubRels)});
 					}
 		
 					checkQuiesceLock();
@@ -823,7 +861,7 @@ public class ClientState {
 						actualInFlight++;
 	
 						//@TRACE 623=+1 actualInFlight={0}
-						log.fine(CLASS_NAME,methodName,"623",new Object[]{new Integer(actualInFlight)});
+						log.fine(CLASS_NAME,methodName,"623",new Object[]{ Integer.valueOf(actualInFlight)});
 					} else {
 						//@TRACE 622=inflight window full
 						log.fine(CLASS_NAME,methodName,"622");				
@@ -845,7 +883,7 @@ public class ClientState {
         }
         // @TRACE 643=sent bytes count={0}                                                                                                                                                                                            
         log.fine(CLASS_NAME, methodName, "643", new Object[] {
-        		 new Integer(sentBytesCount) });
+        		  Integer.valueOf(sentBytesCount) });
     }
 
 	
@@ -861,6 +899,7 @@ public class ClientState {
 		log.fine(CLASS_NAME,methodName,"625",new Object[]{message.getKey()});
 		
 		MqttToken token = tokenStore.getToken(message);
+		if (token == null) return;
 		token.internalTok.notifySent();
         if (message instanceof MqttPingReq) {
             synchronized (pingOutstandingLock) {
@@ -870,7 +909,7 @@ public class ClientState {
                 	pingOutstanding++;
                 }
                 //@TRACE 635=ping sent. pingOutstanding: {0}                                                                                                                                                                  
-                log.fine(CLASS_NAME,methodName,"635",new Object[]{ new Integer(pingOutstanding)});
+                log.fine(CLASS_NAME,methodName,"635",new Object[]{  Integer.valueOf(pingOutstanding)});
             }
         }
         else if (message instanceof MqttPublish) {
@@ -892,7 +931,7 @@ public class ClientState {
 		synchronized (queueLock) {
 			actualInFlight--;
 			//@TRACE 646=-1 actualInFlight={0}
-			log.fine(CLASS_NAME,methodName,"646",new Object[]{new Integer(actualInFlight)});
+			log.fine(CLASS_NAME,methodName,"646",new Object[]{ Integer.valueOf(actualInFlight)});
 			
 			if (!checkQuiesceLock()) {
 				queueLock.notifyAll();
@@ -906,7 +945,7 @@ public class ClientState {
 		int tokC = tokenStore.count();
 		if (quiescing && tokC == 0 && pendingFlows.size() == 0 && callback.isQuiesced()) {
 			//@TRACE 626=quiescing={0} actualInFlight={1} pendingFlows={2} inFlightPubRels={3} callbackQuiesce={4} tokens={5}
-			log.fine(CLASS_NAME,methodName,"626",new Object[]{new Boolean(quiescing), new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), Boolean.valueOf(callback.isQuiesced()), new Integer(tokC)});
+			log.fine(CLASS_NAME,methodName,"626",new Object[]{ Boolean.valueOf(quiescing),  Integer.valueOf(actualInFlight),  Integer.valueOf(pendingFlows.size()),  Integer.valueOf(inFlightPubRels), Boolean.valueOf(callback.isQuiesced()),  Integer.valueOf(tokC)});
 			synchronized (quiesceLock) {
 				quiesceLock.notifyAll();
 			}
@@ -922,7 +961,7 @@ public class ClientState {
         }
         // @TRACE 630=received bytes count={0}                                                                                                                                                                                        
         log.fine(CLASS_NAME, methodName, "630", new Object[] {
-                 new Integer(receivedBytesCount) });
+                  Integer.valueOf(receivedBytesCount) });
     }
 
     /**
@@ -937,7 +976,7 @@ public class ClientState {
 
 		// @TRACE 627=received key={0} message={1}
 		log.fine(CLASS_NAME, methodName, "627", new Object[] {
-				new Integer(ack.getMessageId()), ack });
+				 Integer.valueOf(ack.getMessageId()), ack });
 
 		MqttToken token = tokenStore.getToken(ack);
 		MqttException mex = null;
@@ -945,7 +984,7 @@ public class ClientState {
 		if (token == null) {
 			// @TRACE 662=no message found for ack id={0}
 			log.fine(CLASS_NAME, methodName, "662", new Object[] {
-					new Integer(ack.getMessageId())});
+					 Integer.valueOf(ack.getMessageId())});
 		} else if (ack instanceof MqttPubRec) {
 			// Complete the QoS 2 flow. Unlike all other
 			// flows, QoS is a 2 phase flow. The second phase sends a
@@ -968,7 +1007,7 @@ public class ClientState {
                 }
             }
             //@TRACE 636=ping response received. pingOutstanding: {0}                                                                                                                                                     
-            log.fine(CLASS_NAME,methodName,"636",new Object[]{ new Integer(pingOutstanding)});
+            log.fine(CLASS_NAME,methodName,"636",new Object[]{  Integer.valueOf(pingOutstanding)});
 		} else if (ack instanceof MqttConnack) {
 			int rc = ((MqttConnack) ack).getReturnCode();
 			if (rc == 0) {
@@ -1019,7 +1058,7 @@ public class ClientState {
 
 		// @TRACE 651=received key={0} message={1}
 		log.fine(CLASS_NAME, methodName, "651", new Object[] {
-				new Integer(message.getMessageId()), message });
+				 Integer.valueOf(message.getMessageId()), message });
 		
 		if (!quiescing) {
 			if (message instanceof MqttPublish) {
@@ -1034,7 +1073,7 @@ public class ClientState {
 				case 2:
 					persistence.put(getReceivedPersistenceKey(message),
 							(MqttPublish) message);
-					inboundQoS2.put(new Integer(send.getMessageId()), send);
+					inboundQoS2.put( Integer.valueOf(send.getMessageId()), send);
 					this.send(new MqttPubRec(send), null);
 					break;
 
@@ -1043,7 +1082,7 @@ public class ClientState {
 				}
 			} else if (message instanceof MqttPubRel) {
 				MqttPublish sendMsg = (MqttPublish) inboundQoS2
-						.get(new Integer(message.getMessageId()));
+						.get( Integer.valueOf(message.getMessageId()));
 				if (sendMsg != null) {
 					if (callback != null) {
 						callback.messageArrived(sendMsg);
@@ -1078,7 +1117,7 @@ public class ClientState {
 			
 			// @TRACE 629=received key={0} token={1} message={2}
 			log.fine(CLASS_NAME, methodName, "629", new Object[] {
-					 new Integer(message.getMessageId()), token, message });
+					  Integer.valueOf(message.getMessageId()), token, message });
 
 			MqttAck ack = (MqttAck) message;
 
@@ -1087,19 +1126,19 @@ public class ClientState {
 				// QoS 1 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
 				persistence.remove(getSendBufferedPersistenceKey(message));
-				outboundQoS1.remove(new Integer(ack.getMessageId()));
+				outboundQoS1.remove(Integer.valueOf(ack.getMessageId()));
 				decrementInFlight();
 				releaseMessageId(message.getMessageId());
 				tokenStore.removeToken(message);
 				// @TRACE 650=removed Qos 1 publish. key={0}
 				log.fine(CLASS_NAME, methodName, "650",
-						new Object[] { new Integer(ack.getMessageId()) });
+						new Object[] {  Integer.valueOf(ack.getMessageId()) });
 			} else if (ack instanceof MqttPubComp) {
 				// QoS 2 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
 				persistence.remove(getSendConfirmPersistenceKey(message));
 				persistence.remove(getSendBufferedPersistenceKey(message));
-				outboundQoS2.remove(new Integer(ack.getMessageId()));
+				outboundQoS2.remove( Integer.valueOf(ack.getMessageId()));
 
 				inFlightPubRels--;
 				decrementInFlight();
@@ -1108,8 +1147,8 @@ public class ClientState {
 
 				// @TRACE 645=removed QoS 2 publish/pubrel. key={0}, -1 inFlightPubRels={1}
 				log.fine(CLASS_NAME, methodName, "645", new Object[] {
-						new Integer(ack.getMessageId()),
-						new Integer(inFlightPubRels) });
+						 Integer.valueOf(ack.getMessageId()),
+						 Integer.valueOf(inFlightPubRels) });
 			}
 
 			checkQuiesceLock();
@@ -1227,7 +1266,7 @@ public class ClientState {
 	 * @param msgId A message ID that can be freed up for re-use.
 	 */
 	private synchronized void releaseMessageId(int msgId) {
-		inUseMsgIds.remove(new Integer(msgId));
+		inUseMsgIds.remove( Integer.valueOf(msgId));
 	}
 
 	/**
@@ -1252,8 +1291,8 @@ public class ClientState {
 	        		throw ExceptionHelper.createMqttException(MqttException.REASON_CODE_NO_MESSAGE_IDS_AVAILABLE);
 	        	}
 	        }
-	    } while( inUseMsgIds.containsKey( new Integer(nextMsgId) ) );
-	    Integer id = new Integer(nextMsgId);
+	    } while( inUseMsgIds.containsKey(  Integer.valueOf(nextMsgId) ) );
+	    Integer id =  Integer.valueOf(nextMsgId);
 	    inUseMsgIds.put(id, id);
 	    return nextMsgId;
 	}
@@ -1270,7 +1309,7 @@ public class ClientState {
 		// If the timeout is greater than zero t
 		if (timeout > 0 ) {
 			//@TRACE 637=timeout={0}
-			log.fine(CLASS_NAME,methodName, "637",new Object[]{new Long(timeout)});
+			log.fine(CLASS_NAME,methodName, "637",new Object[]{ Long.valueOf(timeout)});
 			synchronized (queueLock) {
 				this.quiescing = true;
 			}
@@ -1286,7 +1325,7 @@ public class ClientState {
 					int tokc = tokenStore.count();
 					if (tokc > 0 || pendingFlows.size() >0 || !callback.isQuiesced()) {
 						//@TRACE 639=wait for outstanding: actualInFlight={0} pendingFlows={1} inFlightPubRels={2} tokens={3}
-						log.fine(CLASS_NAME, methodName,"639", new Object[]{new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), new Integer(tokc)});
+						log.fine(CLASS_NAME, methodName,"639", new Object[]{ Integer.valueOf(actualInFlight),  Integer.valueOf(pendingFlows.size()),  Integer.valueOf(inFlightPubRels),  Integer.valueOf(tokc)});
 
 						// wait for outstanding in flight messages to complete and
 						// any pending flows to complete
@@ -1324,20 +1363,20 @@ public class ClientState {
 		final String methodName = "deliveryComplete";
 
 		//@TRACE 641=remove publish from persistence. key={0}
-		log.fine(CLASS_NAME,methodName,"641", new Object[]{new Integer(message.getMessageId())});
+		log.fine(CLASS_NAME,methodName,"641", new Object[]{ Integer.valueOf(message.getMessageId())});
 		
 		persistence.remove(getReceivedPersistenceKey(message));
-		inboundQoS2.remove(new Integer(message.getMessageId()));
+		inboundQoS2.remove( Integer.valueOf(message.getMessageId()));
 	}
 	
 	protected void deliveryComplete(int messageId) throws MqttPersistenceException {
 		final String methodName = "deliveryComplete";
 
 		//@TRACE 641=remove publish from persistence. key={0}
-		log.fine(CLASS_NAME,methodName,"641", new Object[]{new Integer(messageId)});
+		log.fine(CLASS_NAME,methodName,"641", new Object[]{ Integer.valueOf(messageId)});
 		
 		persistence.remove(getReceivedPersistenceKey(messageId));
-		inboundQoS2.remove(new Integer(messageId));
+		inboundQoS2.remove( Integer.valueOf(messageId));
 	}
 	
 	public int getActualInFlight(){
@@ -1383,14 +1422,14 @@ public class ClientState {
 		props.put("In use msgids", inUseMsgIds);
 		props.put("pendingMessages", pendingMessages);
 		props.put("pendingFlows", pendingFlows);
-		props.put("maxInflight", new Integer(maxInflight));
-		props.put("nextMsgID", new Integer(nextMsgId));
-		props.put("actualInFlight", new Integer(actualInFlight));
-		props.put("inFlightPubRels", new Integer(inFlightPubRels));
+		props.put("maxInflight",  Integer.valueOf(maxInflight));
+		props.put("nextMsgID",  Integer.valueOf(nextMsgId));
+		props.put("actualInFlight",  Integer.valueOf(actualInFlight));
+		props.put("inFlightPubRels",  Integer.valueOf(inFlightPubRels));
 		props.put("quiescing", Boolean.valueOf(quiescing));
-		props.put("pingoutstanding", new Integer(pingOutstanding));
-		props.put("lastOutboundActivity", new Long(lastOutboundActivity));
-		props.put("lastInboundActivity", new Long(lastInboundActivity));
+		props.put("pingoutstanding",  Integer.valueOf(pingOutstanding));
+		props.put("lastOutboundActivity",  Long.valueOf(lastOutboundActivity));
+		props.put("lastInboundActivity",  Long.valueOf(lastInboundActivity));
 		props.put("outboundQoS2", outboundQoS2);
 		props.put("outboundQoS1", outboundQoS1);
 		props.put("outboundQoS0", outboundQoS0);
